<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.fmi_fmf.RegistrationActivity">


    <EditText android:id="@+id/mobile_no"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_number"
        android:layout_below="@+id/nameView"
        android:layout_centerHorizontal="true"
        android:ems="15"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_weiter"
        android:onClick="verifyNumber"
        android:id="@+id/addTestButton"
        android:layout_below="@+id/mobile_no"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textTypeNumber"
        android:id="@+id/nameView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_below="@+id/addTestButton"
        android:layout_centerHorizontal="true"
        android:text="@string/textVerifyNumber" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_reg"
        android:id="@+id/button2"
        android:layout_below="@+id/code_no"
        android:layout_centerHorizontal="true"
        android:onClick="compareNumber" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/code_no"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:ems="4"/>

</RelativeLayout>
